--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "mongoose": "^6.5.1",
     "next": "12.2.3",
     "react": "18.2.0",
