--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.1",
     "mongoose": "^6.5.1",
     "next": "12.2.3",
+    "next-auth": "3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
